# fastapi_async_sqlachemy_postgresl_jwt

./: .dockerignore  .gitignore  alembic.ini  pyproject.toml
app/: config.py  database.py  main.py
app/alembic_migrations/: env.py
app/alembic_migrations/versions/: 78e6db848cc9_initial_tables.py
app/api/dependencies/: auth.py  core.py  user.py
app/api/routes/: users.py
app/crud/: user.py
app/models/: __init__.py  user.py
app/schemas/: auth.py  user.py
app/utils/: auth.py
